<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Carlos Andres Jimenez <apps@carlosandresjimenez.co>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Currency Alerts</string>

    <string name="action_crash">Crash</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_alert">Alert</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">currencyalerts.carlosjimenez.co</string>
    <string name="content_authority">co.carlosjimenez.android.currencyalerts.app</string>

    <string name="period_label">Period</string>
    <string name="max_rate_label">Max Rate</string>
    <string name="min_rate_label">Min Rate</string>
    <string name="average_rate_label">Average</string>

    <string name="alarm_period_label">Period</string>
    <string name="alarm_fluctuation_label">Max Fluctuation (%)</string>

    <string name="default_max_fluctuation">10</string>

    <string name="alarm_period_3_months_label">3 Months</string>
    <string name="alarm_period_2_months_label">2 Months</string>
    <string name="alarm_period_1_month_label">1 Month</string>
    <string name="alarm_period_1_week_label">1 Week</string>
    <string name="alarm_period_1_day_label">1 Day</string>

    <string name="alarm_period_3_months_value">90</string>
    <string name="alarm_period_2_months_value">60</string>
    <string name="alarm_period_1_month_value">30</string>
    <string name="alarm_period_1_week_value">7</string>
    <string name="alarm_period_1_day_value">1</string>

    <string name="title_widget_detail">Currency Forecast</string>

    <string name="calculate_description">Calculate rate values on other currencies</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="dialog_calc_rates_empty_value">Please enter any number to calculate all rates</string>
    <string name="dialog_existing_alert">There is currently an alert for currency <xliff:g id="currencyFrom">%1$s</xliff:g> to <xliff:g id="rate">%2$s</xliff:g>, do you want to overwrite it?</string>

    <!-- Empty Weather Database -->
    <string name="empty_forex_list">No Rates Information Available</string>
    <string name="empty_forex_list_no_network">No rates information available. The network is not available to fetch rates data.</string>
    <string name="empty_forex_list_server_down">No rates information available. The server is not returning data.</string>
    <string name="empty_forex_list_invalid">No rates information available. The server is returning invalid data.</string>
    <string name="empty_forex_list_server_error">No rates information available. The server is not returning valid data. Please check for an updated version of Currency Rates.</string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_currency_rate"><xliff:g id="prefix">%1$s</xliff:g> <xliff:g id="rate">%2$1.2f</xliff:g></string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="format_country_flag_description">Flag of <xliff:g id="rate">%1$s</xliff:g></string>

    <string name="detail_flag_from_transition_name" translatable="false">TN_DetailFragFrom</string>
    <string name="detail_flag_to_transition_name" translatable="false">TN_DetailFlagTo</string>

    <!-- Strings with country and currency general info -->
    <string name="pref_co_code_us">US</string>
    <string name="pref_co_name_us">United States of America</string>
    <string name="pref_co_flag_us">http://www.freeflagicons.com/download/?series=round_icon&amp;country=united_states_of_america&amp;size=256</string>
    <string name="pref_cu_id_us">USD</string>
    <string name="pref_cu_name_us">United States dollar</string>
    <string name="pref_cu_symbol_us">$</string>

    <string name="pref_co_code_co">CO</string>
    <string name="pref_co_name_co">Colombia</string>
    <string name="pref_co_flag_co">http://www.freeflagicons.com/download/?series=round_icon&amp;country=colombia&amp;size=256</string>
    <string name="pref_cu_id_co">COP</string>
    <string name="pref_cu_name_co">Colombian peso</string>
    <string name="pref_cu_symbol_co">$</string>

    <string name="pref_co_code_za">ZA</string>
    <string name="pref_co_name_za">South Africa</string>
    <string name="pref_co_flag_za">http://www.freeflagicons.com/download/?series=round_icon&amp;country=south_africa&amp;size=256</string>
    <string name="pref_cu_id_za">ZAR</string>
    <string name="pref_cu_name_za">South African rand</string>
    <string name="pref_cu_symbol_za">R</string>

    <string name="pref_co_code_eu">EU</string>
    <string name="pref_co_name_eu">Europe</string>
    <string name="pref_co_flag_eu">http://www.freeflagicons.com/download/?series=round_icon&amp;country=european_union&amp;size=256</string>
    <string name="pref_cu_id_eu">EUR</string>
    <string name="pref_cu_name_eu">European euro</string>
    <string name="pref_cu_symbol_eu">€</string>

    <string name="pref_co_code_gb">GB</string>
    <string name="pref_co_name_gb">United Kingdom</string>
    <string name="pref_co_flag_gb">http://www.freeflagicons.com/download/?series=round_icon&amp;country=united_kingdom&amp;size=256</string>
    <string name="pref_cu_id_gb">GBP</string>
    <string name="pref_cu_name_gb">British pound</string>
    <string name="pref_cu_symbol_gb">£</string>

    <string name="pref_co_code_cn">CN</string>
    <string name="pref_co_name_cn">China</string>
    <string name="pref_co_flag_cn">http://www.freeflagicons.com/download/?series=round_icon&amp;country=china&amp;size=256</string>
    <string name="pref_cu_id_cn">CNY</string>
    <string name="pref_cu_name_cn">Chinese yuan</string>
    <string name="pref_cu_symbol_cn">¥</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable-notifications</string>
    <string name="pref_enable_notifications_label">Forex Alerts</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_delete_alerts_key" translatable="false">clear-alerts</string>
    <string name="pref_delete_alerts_label">Delete alert settings</string>

    <string name="no_alert_summary">No alerts set currently.</string>
    <string name="format_alert_summary">Currency <xliff:g id="currencyFrom">%1$s</xliff:g>-<xliff:g id="currencyTo">%2$s</xliff:g>, period <xliff:g id="days">%3$d</xliff:g> day(s) <xliff:g id="fluctuation">%4$.2f</xliff:g>%%</string>

    <string name="pref_sync_frequency_key">sync-frequency</string>
    <string name="pref_sync_frequency_title">Sync frequency</string>
    <string name="pref_sync_frequency_default" translatable="false">180</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_main_currency_key" translatable="false">main_currency</string>
    <string name="pref_main_currency_label">Main Currency</string>
    <string name="pref_main_currency_default" translatable="false">@string/pref_cu_id_us</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_currencies_key" translatable="false">currencies</string>
    <string name="pref_currencies_label">Currencies Displayed</string>

    <!-- Key name for storing status in SharedPreferences -->
    <string name="pref_forex_status_key" translatable="false">forex-status</string>
    <string name="pref_currency_status_key" translatable="false">currency-status</string>

    <string name="pref_alert_check_enabled_key" translatable="false">alert-check-enabled</string>
    <string name="pref_alert_check_enabled_default" translatable="false">false</string>
    <string name="pref_alert_check_currency_from_key" translatable="false">alert-check-currency-from</string>
    <string name="pref_alert_check_currency_to_key" translatable="false">alert-check-currency-to</string>
    <string name="pref_alert_check_period_key" translatable="false">alert-check-period</string>
    <string name="pref_alert_check_period_default" translatable="false">30</string>
    <string name="pref_alert_check_fluctuation_key" translatable="false">alert-check-fluctuation</string>
    <string name="pref_alert_check_fluctuation_default" translatable="false">10</string>
    <string name="pref_alert_check_rate_average_key" translatable="false">alert-check-rate-average</string>
    <string name="pref_alert_check_rate_average_default" translatable="false">-1</string>

    <string name="pref_displayed_currencies_key" translatable="false">displayed-currencies</string>

    <string name="pref_forex_sync_date_key" translatable="false">forex-sync-date</string>
    <string name="pref_forex_sync_date_label" translatable="false">Last Sync</string>

    <!-- Key name for storing main currency values in SharedPreferences -->
    <string name="pref_main_currency_id_key" translatable="false">main_currency_id</string>
    <string name="pref_main_currency_name_key" translatable="false">main_currency_name</string>
    <string name="pref_main_currency_symbol_key" translatable="false">main_currency_symbol</string>
    <string name="pref_main_country_code_key" translatable="false">main_country_code</string>
    <string name="pref_main_country_name_key" translatable="false">main_country_name</string>
    <string name="pref_main_country_flag_key" translatable="false">main_country_flag</string>

    <string name="pref_notification_category_key" translatable="false">notification_category</string>
    <string name="pref_notification_category_label" translatable="true">Notifications</string>

    <string name="pref_sync_category_key" translatable="false">sync_category</string>
    <string name="pref_sync_category_label" translatable="true">Data &amp; sync</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="notification_title">Currency Alert</string>
    <string name="notification_text"><xliff:g id="currencyFrom">%1$s</xliff:g> against <xliff:g id="currencyTo">%2$s</xliff:g> has gone <xliff:g id="fluctuationStatus">%3$s</xliff:g> by <xliff:g id="fluctuationValue">%4$.2f</xliff:g>%%</string>

    <string name="notification_positive_fluctuation">up</string>
    <string name="notification_negative_fluctuation">down</string>

</resources>
