<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2016 Carlos Andres Jimenez <apps@carlosandresjimenez.co>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<!-- Detail Layout for Grid -->
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="@color/detail_accent_pane_background"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingEnd="@dimen/rate_detail_horizontal_padding"
    android:paddingLeft="@dimen/rate_detail_horizontal_padding"
    android:paddingRight="@dimen/rate_detail_horizontal_padding"
    android:paddingStart="@dimen/rate_detail_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    app:columnCount="2">

    <TextView
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/period_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_period_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="1 Month" />

    <TextView
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/max_rate_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_max_rate_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="$ 2992.01" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/min_rate_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_min_rate_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="$ 2901.34" />

    <TextView
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/average_rate_label"
        android:textColor="@color/detail_accent_label"
        android:textSize="20sp"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_average_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="$ 2945.32" />

</android.support.v7.widget.GridLayout>